--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "faker-br": "^0.4.1",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
-  "description": ""    
+  "description": ""
 }
-
