--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest-stare": "^2.5.1"
+  }
 }
